default/objects/PPR_API_Settings__c/PPR_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for PPR API Controllers, Services, etc</description>
    <label>PPR_API_Settings</label>
</CustomObject>