default/objects/PPR_API_Settings__c/fields/Block_API_Actions__c.field-meta.xml
<CustomField>
    <fullName>Block_API_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block API Actions</label>
    <type>Checkbox</type>
</CustomField>