default/objects/PPR_API_Settings__c/fields/Business_data_relevance__c.field-meta.xml
<CustomField>
    <fullName>Business_data_relevance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Relevance of business data to use it without update like deduplication data, black list data, etc (in days)</description>
    <inlineHelpText>Relevance of business data to use it without update like deduplication data, black list data, etc (in days)</inlineHelpText>
    <label>Business data relevance</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>