default/objects/PPR_API_Settings__c/fields/Callback_URI__c.field-meta.xml
<CustomField>
    <fullName>Callback_URI__c</fullName>
    <label>Callback URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>