default/objects/PPR_API_Settings__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Job Type in Tp3 for Overdraft</inlineHelpText>
    <label>Contract Type</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>