default/objects/PPR_API_Settings__c/fields/Credit_days_ppr__c.field-meta.xml
<CustomField>
    <fullName>Credit_days_ppr__c</fullName>
    <inlineHelpText>Job Type in Salesforce for Overdraft</inlineHelpText>
    <label>Credit days ppr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>