default/objects/PPR_API_Settings__c/fields/Default_order_type__c.field-meta.xml
<CustomField>
    <fullName>Default_order_type__c</fullName>
    <label>Default order type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>