default/objects/PPR_API_Settings__c/fields/Default_product__c.field-meta.xml
<CustomField>
    <fullName>Default_product__c</fullName>
    <label>Default product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>