default/objects/PPR_API_Settings__c/fields/Default_tariff__c.field-meta.xml
<CustomField>
    <fullName>Default_tariff__c</fullName>
    <label>Default tariff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>