default/objects/PPR_API_Settings__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <inlineHelpText>Due date in Tp3 for Overdraft</inlineHelpText>
    <label>Due date</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>