default/objects/PPR_API_Settings__c/fields/Prepay_sum__c.field-meta.xml
<CustomField>
    <fullName>Prepay_sum__c</fullName>
    <label>Prepay sum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>